--- a/templates/baymax.html
+++ b/templates/baymax.html
@@ -24,7 +24,7 @@
 											<li><a href="../index.html">Home</a></li>
 											<li><a href="/templates/hospitals.html">Hospitals</a></li>
 											<li><a href="/templates/firstaid.html">First Aid</a></li>
-											<li><a href="/templates/baymax.html">Baymax</a></li>
+											<li><a href="../templates/baymax.html">Baymax</a></li>
 										</ul>
 									</div>
 								</li>
@@ -35,16 +35,25 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Hospitals Near You</h2>
+							<h2>First Aid</h2>
 							<p>What to Do</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
 								<section>
-                  Google Maps API
-									</section>
-
+                  Baymax AI
+                  <div class="features">
+                    <iframe
+    allow="microphone;"
+    width="350"
+    height="430"
+    src="https://console.dialogflow.com/api-client/demo/embedded/Baymax">
+</iframe>
+<br><br>
+</div>
+								</section>
+<br><br><br>
 
 
 
@@ -52,7 +61,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-              <li><a href="https://twitter.com/brenna_nieva" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://twitter.com/brenna_nieva" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/brenna_nieva/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://www.linkedin.com/in/brennanieva/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="http://www.brennanieva.me" class="icon fa-bookmark-o"><span class="label">Website</span></a></li>
@@ -71,6 +80,28 @@
 			<script src="../assets/js/skel.min.js"></script>
 			<script src="../assets/js/util.js"></script>
 			<script src="../assets/js/main.js"></script>
+
+    <!-- Firebase SDK -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/6.3.5/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#config-web-app -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyB1MLd_O9FqjwJEsJExjo807Lxbp_ZlH_8",
+    authDomain: "savealifeproject-82b69.firebaseapp.com",
+    databaseURL: "https://savealifeproject-82b69.firebaseio.com",
+    projectId: "savealifeproject-82b69",
+    storageBucket: "",
+    messagingSenderId: "275364404002",
+    appId: "1:275364404002:web:c955a6e89f40451b"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 
 	</body>
 </html>
