--- a/templates/firstaid.html
+++ b/templates/firstaid.html
@@ -24,7 +24,7 @@
 											<li><a href="../index.html">Home</a></li>
 											<li><a href="/templates/hospitals.html">Hospitals</a></li>
 											<li><a href="/templates/firstaid.html">First Aid</a></li>
-											<li><a href="https://baymax.glitch.me">Baymax</a></li>
+											<li><a href="../templates/baymax.html">Baymax</a></li>
 										</ul>
 									</div>
 								</li>
@@ -103,11 +103,10 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/brenna_nieva" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.instagram.com/brenna_nieva/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.linkedin.com/in/brennanieva/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="http://www.brennanieva.me" class="icon fa-bookmark-o"><span class="label">Website</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Brenna Nieva 2019</a></li>
