--- a/templates/firstaid.html
+++ b/templates/firstaid.html
@@ -21,10 +21,10 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="../index.html">Home</a></li>
+											<li><a href="index.html">Home</a></li>
 											<li><a href="/templates/hospitals.html">Hospitals</a></li>
 											<li><a href="/templates/firstaid.html">First Aid</a></li>
-											<li><a href="../templates/baymax.html">Baymax</a></li>
+											<li><a href="/templates/baymax.html">Baymax</a></li>
 										</ul>
 									</div>
 								</li>
