--- a/templates/baymax.html
+++ b/templates/baymax.html
@@ -22,9 +22,9 @@
 									<div id="menu">
 										<ul>
                       <li><a href="index.html">Home</a></li>
-											<li><a href="/templates/hospitals.html">Hospitals</a></li>
-											<li><a href="/templates/firstaid.html">First Aid</a></li>
-											<li><a href="/templates/baymax.html">Baymax</a></li>
+											<li><a href="/../templates/hospitals.html">Hospitals</a></li>
+											<li><a href="/../templates/firstaid.html">First Aid</a></li>
+											<li><a href="/../templates/baymax.html">Baymax</a></li>
 										</ul>
 									</div>
 								</li>
