--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2351,6 +2351,26 @@
 
 		}
 
+		.disclaimer {
+			display: -moz-flex;
+			display: -webkit-flex;
+			display: -ms-flex;
+			display: flex;
+			-moz-flex-wrap: wrap;
+			-webkit-flex-wrap: wrap;
+			-ms-flex-wrap: wrap;
+			flex-wrap: wrap;
+			-moz-justify-content: center;
+			-webkit-justify-content: center;
+			-ms-justify-content: center;
+			justify-content: center;
+			list-style: none;
+			padding: 0;
+			width: 100%;
+			text-align: center;
+			
+		}
+
 /* Features */
 
 	.features {
